fix: hr too bright in dark mode

--- a/resources/css/cedar-theme.css
+++ b/resources/css/cedar-theme.css
@@ -154,7 +154,7 @@
         --color-b: var(--color-gray-200); /* gray-200 #e5e7eb */
         --color-border-1: var(--color-neutral-600); /* neutral-600 #525252 */
         --color-d: color-mix(in oklab, var(--color-neutral-700) 40%, transparent); /* neutral-700 #404040 */
-        --color-hr: var(--foreground-0);
+        --color-hr: var(--color-foreground-3);
 
         /* Indicator Colors */
         --color-success: var(--color-green-600); /* green-600 */
